<resources>
    <string name="app_name">Homework</string>

    <string name="title">登录窗口</string>
    <string name="username">用户名：</string>
    <string name="pwd">密&#160;&#160;&#160;&#160;码：</string>
    <string name="retry_hint">可重试的剩余次数：%1$d</string>
    <string name="login">登录</string>
    <string name="exit">退出</string>

    <string name="dialog_ok_hint">登录成功</string>
    <string name="dialog_fail_hint">账号或密码错误，请重试</string>
</resources>