<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tool="http://schemas.android.com/tools">

    <TextView
        android:id="@+id/tv_tit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="20dp"
        android:textSize="24sp"
        android:textStyle="bold"
        android:text="@string/title"
        />

    <TextView
        android:id="@+id/tv_us"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:gravity="center_vertical"
        app:layout_constraintTop_toBottomOf="@id/tv_tit"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        android:text="@string/username"
        />

    <EditText
        android:id="@+id/et_username"
        android:layout_width="0dp"
        android:layout_height="40dp"
        app:layout_constraintTop_toBottomOf="@id/tv_tit"
        app:layout_constraintLeft_toRightOf="@id/tv_us"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:textSize="20sp"
        />

    <TextView
        android:id="@+id/tv_pwd"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:gravity="center_vertical"
        app:layout_constraintTop_toBottomOf="@id/tv_us"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        android:text="@string/pwd"
        />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="0dp"
        android:layout_height="40dp"
        app:layout_constraintTop_toBottomOf="@id/tv_us"
        app:layout_constraintLeft_toRightOf="@id/tv_pwd"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:textSize="20sp"
        />

    <TextView
        android:id="@+id/tv_retry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        app:layout_constraintTop_toBottomOf="@id/tv_pwd"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:textSize="16sp"
        android:text="@string/retry_hint"
        android:visibility="invisible"
        tool:visibility="visible"
        />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintTop_toBottomOf="@id/tv_retry"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/btn_exit"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:text="@string/login"
        android:textSize="20sp"
        />

    <Button
        android:id="@+id/btn_exit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintTop_toBottomOf="@id/tv_retry"
        app:layout_constraintLeft_toRightOf="@id/btn_login"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="50dp"
        android:text="@string/exit"
        android:textSize="20sp"
        />
</androidx.constraintlayout.widget.ConstraintLayout>